# pico_shell_example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example_app/: CMakeLists.txt  commands.c  common.h  main.c
port/: freertos.c
